# girder-async-routes

./: .gitignore  README.md  asgi.py  async_file_routes.py  conftest.py  pyproject.toml  test_async_file_routes.py  tox.ini
.github/workflows/: build-test.yaml  release.yml
src/girder_async_routes/: __init__.py  asgi.py  file.py  folder.py  item.py  resource.py  routes.py  utils.py
tests/: conftest.py  test_async_file_routes.py  test_body_buffering.py  test_file_routes.py  test_folder_routes.py  test_item_routes.py  test_resource_routes.py
