[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "girder-async-routes"
dynamic = ["version"]
description = "Async-native file download routes for Girder, bypassing WSGIMiddleware buffering"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "anyio",
    "girder>=5.0.0a5",
    "starlette",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
    "pytest-cov",
    "pytest-girder>=5.0.0a5",
    "tox",
    "ruff"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
junit_family = ["xunit2"]

[tool.coverage.run]
source = ["girder_async_routes"]

[tool.coverage.report]
show_missing = true
